[metadata]
name = willump
version = 1.0.0
author = Eleanor Juno Silver
author_email = ejsilver@wpi.edu
description = Willump is a Python3 helper for the League of Legends LCU API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elliejs/Willump
project_urls =
    Bug Tracker = https://github.com/elliejs/Willump/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
